--- a/about/index.html
+++ b/about/index.html
@@ -18,16 +18,30 @@
   <link rel="icon" type="image/png" href="../img/favicon.ico">
 </head>
 <body>
+  <!-- FB SCRIPT -->
+  <div id="fb-root"></div>
+  <script
+    async
+    defer
+    crossorigin="anonymous"
+    src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0&appId=1981051258695498"
+  >
+  </script>
   <!-- HEADERS -->
   <header id="header_desktop">
     <nav>
       <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="./index.html">ABOUT</a></li>
-        <li><a href="../contact/index.html">CONTACT</a></li>
-        <li><a href="../portfolio/index.html">PORTFOLIO</a></li>
+        <li><a href="../index.html"></a></li>
+        <li><a href="./index.html"></a></li>
+        <li><a href="../contact/index.html"></a></li>
+        <li><a href="../portfolio/index.html"></a></li>
       </ul>
     </nav>
+    <div class="language">
+      <button class="language_en">en</button>
+      /
+      <button class="language_cz">cz</button>
+    </div>
   </header>
   <header id="header_mobile">
     <div id="menu_icon_container">
@@ -37,44 +51,56 @@
     <!-- MOBILE NAVIGATION -->
     <nav id="mobile_menu">
       <ul>
-        <li><a href="../index.html">HOME</a></li>
-        <li><a href="./index.html">ABOUT</a></li>
-        <li><a href="../contact/index.html">CONTACT</a></li>
-        <li><a href="../portfolio/index.html">PORTFOLIO</a></li>
+        <li><a href="../index.html"></a></li>
+        <li><a href="./index.html"></a></li>
+        <li><a href="../contact/index.html"></a></li>
+        <li><a href="../portfolio/index.html"></a></li>
       </ul>
     </nav>
+    <div class="language">
+      <button class="language_en">en</button>
+      /
+      <button class="language_cz">cz</button>
+    </div>
 </header>
     <!-- MAIN CONTENT -->
   <main>
     <section id="heading">
       <h1>
-        Info about
-        <span class="yellow"> Me</span>
+        <span class="heading"></span>
+        <span class="heading yellow"></span>
       </h1>
     </section>
     <section id="introduction">
       <h3>
-        <span class="yellow">Allow me</span>
-        to start&nbsp;by...
+        <span class="subheading yellow"></span>
+        <span class="subheading"></span>
       </h3>
     </section>
     <section id="info">
       <div id="info1">
         <img src="../img/my_picture.jpg" alt="nice picture of me">
-        <p>...introducing myself. My name is Filip&nbsp;Šrankota.<br>
-          I'm a self-tought web developer based near Prague. My main focus has mostly been on front-end.
-          Some of my skills are demonstrated on this site and in the portfolio page. They include HTML, CSS, 
-          JavaScript and ReactJS.
-        </p>
+        <p class="info"></p>
       </div>
       <div id="info2">
-        <p>I'm looking for a job position&nbsp;- junior web developer to start working with a team, keep growing my skills and applying those I've already learned.</p>
-        <p>If you are interested in working with me or want more information about my work, I would love to hear from you! 
-          You can contact me by filling out the form on the contact page.
-        </p>
+        <p class="info"></p>
+        <p class="info"></p>
       </div>
     </section>
   </main>
+  <footer>
+    © 2020 All Rights Reserved
+    <div
+      class="fb-like"
+      data-href="https://vibrant-gates-1be236.netlify.com/index.html"
+      data-width=""
+      data-layout="button"
+      data-action="like"
+      data-size="small"
+      data-share="true"
+    >
+    </div>
+  </footer>
 </body>
 <!-- SVG -->
 <svg version="1.1" xlmns="http://www.w3.org/2000/svg" style="display: none">
@@ -86,5 +112,5 @@
   </symbol>
 </svg>
 <!-- SCRIPTS -->
-<script src="../main.js"></script>
+<script type="module" src="../main.js"></script>
 </html>
