footer, langBtts and portfolio polished

--- a/contact/index.html
+++ b/contact/index.html
@@ -97,7 +97,7 @@
   </main>
   <span id="loading_message"><div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>loading google form…</span>
   <footer>
-    © 2020 All Rights Reserved
+    <span id="footerText"></span>
   </footer>
 </body>
 <!-- SVG -->
