--- a/about/index.html
+++ b/about/index.html
@@ -20,13 +20,6 @@
 <body>
   <!-- FB SCRIPT -->
   <div id="fb-root"></div>
-  <script
-    async
-    defer
-    crossorigin="anonymous"
-    src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v6.0&appId=1981051258695498"
-  >
-  </script>
   <!-- HEADERS -->
   <header id="header_desktop">
     <nav>
@@ -89,7 +82,7 @@
     </section>
   </main>
   <footer>
-    © 2020 All Rights Reserved
+    <span id="footerText"></span>
     <div
       class="fb-like"
       data-href="https://vibrant-gates-1be236.netlify.com/index.html"
