portfolio page upgraded

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,8 +72,9 @@
     </section>
     <section id="portfolio">
       <article id="pexeso" class="project">
+        <h4>Pexeso - memory game</h4>
         <div class="project_img_container">
-          <a href="#"></a>
+          <img src="../../../img/pex1res.jpg" alt="pexeso">
         </div>
         <a href="https://infallible-lichterman-a94e0f.netlify.com/" class="live_version">
           <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
@@ -83,11 +84,20 @@
           <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
           <span class="viewCodeText"></span>
         </a>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>javascript</li>
+          </ul>
+        </aside>
       </article>
       <article id="calculator" class="project">
-          <div class="project_img_container">
-            <a href="#"></a>
-          </div>
+        <h4></h4>
+        <div class="project_img_container">
+          <img src="../../../img/calcres.jpg" alt="calculator">
+        </div>
         <a href="https://sad-meitner-4bcac4.netlify.com/" class="live_version">
           <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
           <span class="liveViewText"></span>
@@ -96,6 +106,39 @@
           <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
           <span class="viewCodeText"></span>
         </a>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>ReactJS</li>
+          </ul>
+        </aside>
+      </article>
+      <article id="chat-app" class="project">
+        <h4></h4>
+        <div class="project_img_container">
+          <img src="../../../img/chat_app2.jpg" alt="chat-app">
+        </div>
+        <a href="#chat-app" class="live_version disabled">
+          <svg class="portfolio_icon"><use xlink:href="#eye-disabled"></use></svg>
+          <span class="liveViewText"></span>
+        </a>
+        <a href="https://github.com/kredenc6/chat-app" class="view_code">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
+          <span class="viewCodeText"></span>
+        </a>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Typescript</li>
+            <li>ReactJS</li>
+            <li>NodeJS</li>
+            <li>SocketIO</li>
+          </ul>
+        </aside>
       </article>
     </section>
   </main>
@@ -124,6 +167,9 @@
       <path d="m256 224c0-7.9 2.9-15.1 7.6-20.7-2.5-0.4-5-0.6-7.6-0.6-28.8 0-52.3 23.9-52.3 53.3s23.5 53.3 52.3 53.3 52.3-23.9 52.3-53.3c0-2.3-0.2-4.6-0.4-6.9-5.5 4.3-12.3 6.9-19.8 6.9-17.8 0-32.1-14.3-32.1-32z"/>
     </g>
   </symbol>
+  <symbol id="eye-disabled" viewbox="0 0 100 100">
+    <path class="st0" d="m75.531 25.829 15.183-17.738-4.7924-5.5911-16.455 19.198c-5.8951-3.4388-12.363-5.5911-19.467-5.5911-17.367 0-30.896 12.914-47.5 33.893 7.3795 9.2526 14.165 17.986 21.905 24.27l-15.119 17.639 4.7924 5.5911 16.307-19.025c5.7254 3.3893 12.087 5.418 19.615 5.418 21.184 0 36.77-20.237 47.5-33.522-5.9375-8.4362-13.232-17.763-21.969-24.542zm-44.531 24.171c0-12.469 8.5246-22.587 19-22.587 4.0926 0 7.8884 1.5339 10.984 4.181l-10.751 12.543c-0.14844-0.64323-0.23326-1.3359-0.23326-2.0534 0-1.9544 0.61496-3.7357 1.6116-5.1211-0.53013-0.098957-1.0603-0.14844-1.6116-0.14844-6.1071 0-11.09 5.9128-11.09 13.186 0 2.1276 0.42411 4.1562 1.1875 5.9375l-5.7891 6.7786c-2.0781-3.6367-3.308-8.0156-3.308-12.716zm19 22.587c-4.0926 0-7.8884-1.5339-10.984-4.181l5.8103-6.7786c1.548 0.98958 3.308 1.5339 5.1741 1.5339 6.1071 0 11.09-5.9128 11.09-13.186 0-0.56901-0.04241-1.138-0.08482-1.707-1.1663 1.0638-2.6083 1.707-4.1987 1.707-0.61496 0-1.1875-0.09896-1.76-0.27214l10.666-12.444c2.0781 3.612 3.308 7.9909 3.308 12.716-0.021205 12.493-8.5458 22.612-19.021 22.612z" fill="#010101" stroke-width=".22904"/>
+  </symbol>
   <symbol id="menu" viewbox="0 0 100 100">
     <path d="m93.542 16.071h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857 0-3.7321 1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857 0 3.7321-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857zm0 40.714h-87.083c-2.1771 0-3.9583-3.0536-3.9583-6.7857s1.7812-6.7857 3.9583-6.7857h87.083c2.1771 0 3.9583 3.0536 3.9583 6.7857s-1.7812 6.7857-3.9583 6.7857z"/>
   </symbol>
@@ -132,7 +178,7 @@
   </symbol>
 </svg>
 <!-- SCRIPTS -->
-<script type="module" src="../main.js"></script>
+<script type="module" src="../mainDev.js"></script>
 <script>
   window.addEventListener("load", resizeProject);
   window.addEventListener("resize", resizeProject);
@@ -142,7 +188,7 @@
     const projectWidth = window.getComputedStyle(projectNodes[0]).width;
     const widthNumber = Math.round(projectWidth.slice(0, -2));
 
-    for(let picture of document.getElementsByClassName("project_img_container")) {
+    for(let picture of document.querySelectorAll("project_img_container img")) {
       picture.style.height = `${Math.round(widthNumber / 1.6)}px`;
     }
   }
