chat-app is public

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -89,7 +89,7 @@
           <ul class="technologies-list">
             <li>HTML</li>
             <li>CSS</li>
-            <li>javascript</li>
+            <li>JavaScript</li>
           </ul>
         </aside>
       </article>
@@ -120,8 +120,8 @@
         <div class="project_img_container">
           <img src="../../../img/chat_app2.jpg" alt="chat-app">
         </div>
-        <a href="#chat-app" class="live_version disabled">
-          <svg class="portfolio_icon"><use xlink:href="#eye-disabled"></use></svg>
+        <a href="https://infallible-bell-95c4f3.netlify.com/" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
           <span class="liveViewText"></span>
         </a>
         <a href="https://github.com/kredenc6/chat-app" class="view_code">
@@ -133,7 +133,7 @@
           <ul class="technologies-list">
             <li>HTML</li>
             <li>CSS</li>
-            <li>Typescript</li>
+            <li>TypeScript</li>
             <li>ReactJS</li>
             <li>NodeJS</li>
             <li>SocketIO</li>
