--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,7 +72,7 @@
     </section>
     <section id="portfolio">
       <article id="pexeso" class="project">
-        <h4>Pexeso - memory game</h4>
+        <h4></h4>
         <div class="project_img_container">
           <img src="../../../img/pex1res.jpg" alt="pexeso">
         </div>
@@ -137,6 +137,29 @@
             <li>ReactJS</li>
             <li>NodeJS</li>
             <li>SocketIO</li>
+          </ul>
+        </aside>
+      </article>
+      <article id="setup-wizard" class="project">
+        <h4></h4>
+        <div class="project_img_container">
+          <img src="../../../img/setupWizard.jpg" alt="setup-wizard">
+        </div>
+        <a href="https://lucid-poincare-5e2d7c.netlify.app/" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
+          <span class="liveViewText"></span>
+        </a>
+        <a href="https://github.com/kredenc6/setupWizard" class="view_code">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
+          <span class="viewCodeText"></span>
+        </a>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>ReactJS</li>
+            <li>Material-UI</li>
+            <li>TypeScript</li>
+            <li>NodeJS</li>
           </ul>
         </aside>
       </article>
