added avatar and loading message language

--- a/about/index.html
+++ b/about/index.html
@@ -72,7 +72,7 @@
     </section>
     <section id="info">
       <div id="info1">
-        <img src="../img/my_picture.jpg" alt="nice picture of me">
+        <img src="../img/myAvatar.png" alt="my avatar">
         <p class="info"></p>
       </div>
       <div id="info2">
