--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <meta name="twitter:card" content="summary" /> 
+  <meta name="twitter:site" content="@metacules" /> 
+  <meta name="twitter:title" content="connecting you to interesting content" /> 
+  <meta name="twitter:description" content="Your description." /> 
+  <meta name="twitter:image" content="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.dumpaday.com%2Fwp-content%2Fuploads%2F2016%2F03%2Ffunny-animal-25.jpg&f=1&nofb=1" />
+
   <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
