changed twitter card picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="twitter:site" content="@metacules" /> 
   <meta name="twitter:title" content="connecting you to interesting content" /> 
   <meta name="twitter:description" content="Your description." /> 
-  <meta name="twitter:image" content="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.dumpaday.com%2Fwp-content%2Fuploads%2F2016%2F03%2Ffunny-animal-25.jpg&f=1&nofb=1" />
+  <meta name="twitter:image" content="./img/myAvatar.png" />
 
   <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
