--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="twitter:site" content="@metacules" /> 
   <meta name="twitter:title" content="connecting you to interesting content" /> 
   <meta name="twitter:description" content="Your description." /> 
-  <meta name="twitter:image" content="./img/myAvatar.png" />
+  <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg/1200px-Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg" />
 
   <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
