--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   <meta name="twitter:card" content="summary" /> 
   <meta name="twitter:site" content="@metacules" /> 
-  <meta name="twitter:title" content="connecting you to interesting content" /> 
-  <meta name="twitter:description" content="Your description." /> 
-  <meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg/1200px-Ice_cream_with_whipped_cream%2C_chocolate_syrup%2C_and_a_wafer_%28cropped%29.jpg" />
+  <meta name="twitter:title" content="Filip Šrankota" /> 
+  <meta name="twitter:description" content="The frontend developer" /> 
+  <meta name="twitter:image" content="%PUBLIC_URL%/img/myAvatar.png" />
 
   <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
