changed path for local twitter card img

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="twitter:site" content="@metacules" /> 
   <meta name="twitter:title" content="Filip Šrankota" /> 
   <meta name="twitter:description" content="The frontend developer" /> 
-  <meta name="twitter:image" content="%PUBLIC_URL%/img/myAvatar.png" />
+  <meta name="twitter:image" content="./img/myAvatar.png" />
 
   <title>Filip Srankota • Web Developer</title>
   <!-- FONTS -->
