updated with Metacules and typing_app

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -163,6 +163,51 @@
           </ul>
         </aside>
       </article>
+      <article id="metacules" class="project">
+        <h4></h4>
+        <span class="project_note">* 3 month cooperation</span>
+        <div class="project_img_container">
+          <img src="../../../img/Metacules3.jpg" alt="Metacules">
+        </div>
+        <a href="https://metacules.com" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
+          <span class="liveViewText"></span>
+        </a>
+        <span class="view_code disabled">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
+          <span class="viewCodeText"></span>
+        </span>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>ReactJS</li>
+            <li>Material-UI</li>
+            <li>NodeJS</li>
+            <li>Mongoose</li>
+          </ul>
+        </aside>
+      </article>
+      <article id="typingPractice" class="project">
+        <h4></h4>
+        <div class="project_img_container">
+          <img src="../../../img/typingPractice2.jpg" alt="typingPractice">
+        </div>
+        <a href="http://eloquent-ramanujan-5d9ccc.netlify.app/" class="live_version">
+          <svg class="portfolio_icon"><use xlink:href="#eye"></use></svg>
+          <span class="liveViewText"></span>
+        </a>
+        <a href="https://github.com/kredenc6/typing_practice" class="view_code">
+          <svg class="portfolio_icon"><use xlink:href="#github"></use></svg>
+          <span class="viewCodeText"></span>
+        </a>
+        <aside class="technologies">
+          <h6></h6>
+          <ul class="technologies-list">
+            <li>ReactJS</li>
+            <li>Material-UI</li>
+          </ul>
+        </aside>
+      </article>
     </section>
   </main>
   <footer>
