metacules note is in both languages now

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,7 +73,7 @@
     <section id="portfolio">
       <article id="metacules" class="project">
         <h4></h4>
-        <span class="project_note">* 3 month cooperation</span>
+        <span id="metacules_note" class="project_note">* 3 month cooperation</span>
         <div class="project_img_container">
           <img src="../../../img/Metacules3.jpg" alt="Metacules">
         </div>
@@ -246,7 +246,7 @@
   </symbol>
 </svg>
 <!-- SCRIPTS -->
-<script type="module" src="../mainDev.js"></script>
+<script type="module" src="../main.js"></script>
 <script>
   window.addEventListener("load", resizeProject);
   window.addEventListener("resize", resizeProject);
